styles/style.css
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Roboto:ital,wght@0,300;0,400;0,700;1,400;1,700&display=swap');

/* * {
    border: solid red 1px;
} */
#content {
    max-width: 1600px;
    display: block;
    margin: 0 auto;
    font-family: Roboto, Lato, Helvetica, sans-serif;
}
body {
    font-size: 1.2em;
    margin: 0;
    padding: 0;
}
header {
    display: grid;
    grid-template-columns: 150px auto;
    /* border: 1px solid red; */
    background-color: #1471AF;
}
.logo {
    width: 2.8em;
    border: 1px solid #000000;
    border-radius: 5px;
}
.logo:hover {
    transform: scale(1.05);
    transition: transform .1s;
}
#logo_link {
    padding-top: 5px;
    justify-self: center;
    align-self: center;
}
nav {
    display: flex;
    justify-content: left;
    align-items: center;
    gap: 40px;
}
nav a {
    font-family: "Open Sans", Lato, Helvetica, sans-serif;
    text-decoration: none;
    color: #F7FFF6;
    display: block;
    padding: 30px;

}
nav a:hover {
    background: #005791;
}
#header-background {
    background-color: #3C6E71;
    text-align: center;
}
#header-background h1 {
    padding-top: 1em;
}
#header-background p {
    padding: 0em 12em 2em 12em;
}
#home-grid-container {
    display: grid;
    grid-template-columns: repeat(11,1fr);
    grid-template-rows: repeat(4, 1fr);
    max-width: 1600px;
}
#home-grid-container img {
    /* max-width: 400px; */
    width: 100%;
    box-sizing: border-box;
    box-shadow: 5px 5px 10px #6f7364;
}
#bloomington-image {
    grid-column: 6/11;
    grid-row: 2/5;
}
#yellowstone-sunset {
    grid-column: 2/7;
    grid-row: 1/5;
    z-index: -1;
}

footer {
    display: flex;
    justify-content: left;
    gap: 40px;
    padding: 20px;
    margin-top: 100px;
    background-color: #1471AF;
    color: #F7FFF6;
}
footer a {
    text-decoration: none;
    color: #F7FFF6;
}
footer a:hover {
    text-decoration: underline;
}

